--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+flask==3.0.2
 beautifulsoup4==4.12.3
+selenium==4.18.1
+gunicorn==21.2.0
+werkzeug==3.0.1
+python-dotenv==1.0.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
@@ -9,6 +14,5 @@ pandas==2.2.0
 pymongo==4.6.1
 pytz==2024.1
 requests==2.31.0
-selenium==4.17.2
 termcolor==2.4.0
 webdriver-manager==3.5.2
